# dotfiles

./: .editorconfig  .gitignore  .oxfmtrc.json  .pre-commit-config.yaml  .zshellcheckrc  INSTRUCTIONS.md  README.md  get_catppuccin.mjs  justfile  package.json  pnpm-lock.yaml  prek.toml  pyproject.toml  setup_ssh_keys.mjs  zshenv
BetterMouse/: 2026-06-11.plist
atuin/: config.toml
aws/: credentials  op_helper.sh  op_helper.zsh  op_mfa_helper.zsh
bat/: config
bootstrap/: _common.zsh  cleanup.zsh  configs.zsh  git.zsh  homebrew.zsh  langs.zsh  login_items.zsh  macos.zsh  op.zsh  pack_man.zsh  qmk.zsh  raycast.zsh  vscode.zsh  zsh.zsh
claude/: CLAUDE.md  settings.json  statusline-command.mjs
dev_env/: README.md  brew_install.sh  homebrew.sh  nodejs.sh  pipx_install.sh  python.sh  rust.sh  zsh.sh
gh/: config.yml
ghostty/: config  config.ghostty
git/: .gitconfig  .gitignore  README.md  config  finrep.gitconfig  ignore  setup_git.py
hammerspoon/: autoclose.lua  init.lua
helix/: config.toml  languages.toml
iTerm/: README.md  com.googlecode.iterm2.plist  setup_iterm.sh
jetbrains/: README.md  Solarized Dark.icls
launch_agents/: dark-notify.plist
npm/: npmrc
pls/: .pls.yml  pls.yml  setup_pls.py
raycast/: README.md
scripts/: update_themes.sh
spaceship/: spaceship.zsh
ssh/: README.md  config  setup_ssh.py
starship/: starship.toml
vim/: .vimrc  README.md  setup_vim.py  vimrc
zed/: keymap.json  settings.json
zsh/: .bookmarks  .zprofile  .zshenv  00_zshrc.zsh  05_brew.zsh  10_aliases.zsh  15_functions.zsh  20_iterm.zsh  30_python.zsh  (+13 more)
(+54 files in other folders)
