[project]
name = "dotfiles"
version = "0.0.0"
description = "A collection of my dotfiles"
authors = [
    {name = "Dhruv Bhanushali", email = "dhruv_b@live.com"},
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

requires-python = "<4.0,>=3.12"
dependencies = []

[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.2,<4",
]

[tool.pdm]
distribution = false
